# HRI

./: .env.example  .flake8  .gitignore  README.md  board_positions.json  board_positions.yaml  pyproject.toml
game-logic/: chess_cube_processor.py  chessboardAnalyzer.py  game.py  main.py  opening_line.py  openings.py  speaker.py  voice_recognizer.py
game-logic/resources/config/: settings.yaml
scripts/: format.bat  format.ps1  format.sh
src/: calc_positions.py  main.py  test-urx.py  test.old.py  test.py  test_positions.py
src/chess_logic/: chess_cube_processor.py  chessboardAnalyzer.py  game.py  openings.py  speaker.py  voice_recognizer.py
src/computer_vision/: chessboard_detection.py  compare_move.py  cube_detection.py  square_detection.py  utils.py  webcam.py
src/debug/: generate_joint_positions.old.py  generate_positions.py  plot_board_positions.py
src/resources/config/: settings.yaml
src/robot/: controller.py  emotions.py  robbot_arm_controller.py  robot_arm_controller.py
src/utils/: calc_positions.py  client.py  inverse_kinematics.py  package.py  robot_arm.py  subpackage.py
